Commit for Victor Leikehman  <lei@il.ibm.com>

PR libgfortran/16704
	* io/read.c (read_radix): Understand letters f and F as hex digits.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@85596 138bc75d-0d04-0410-961f-82ee72b054a4